--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
       <!-- @@@@@@@@@@@@@@@ home @@@@@@@@@@@@@@ -->
       <section class="home" id="home">
         <div class="container">
-          <div>
-            <img src="./assets/img/home.png" alt="" class="home__img" />
-          </div>
-
           <div class="home__container">
+            <div>
+              <img src="./assets/img/home.png" alt="" class="home__img" />
+            </div>
+
             <div class="home__data">
               <div class="home__header">
                 <h1 class="home__title">On ear</h1>
@@ -94,11 +94,24 @@
                 </a>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
 
-            <div class="home__sponser">
+      <!-- @@@@@@@@@@@@@@@ sponser @@@@@@@@@@@@@@ -->
+      <section class="sponser section">
+        <div class="container">
+          <div class="sponser__container">
+            <div>
               <img src="assets/img/sponsor1.png" alt="" class="sponsor__img" />
+            </div>
+            <div>
               <img src="assets/img/sponsor2.png" alt="" class="sponsor__img" />
+            </div>
+            <div>
               <img src="assets/img/sponsor3.png" alt="" class="sponsor__img" />
+            </div>
+            <div>
               <img src="assets/img/sponsor4.png" alt="" class="sponsor__img" />
             </div>
           </div>
@@ -358,11 +371,11 @@
         </div>
 
         <p class="footer__copy">
-          coded by
+          &copy; 2022 coded by
           <a href="https://github.com/soroushmdn" target="_blank"
             >Soroush Karimi.</a
-          ><br />
-          design by Bedimcode youtube channel
+          >
+          design from Bedimcode.
         </p>
       </div>
     </footer>
